Check Box Components: Fix Alignment for New Font Size

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 
 html{
     overflow-y: auto !important;
-    font-size: initial !important;
+    font-size: 14px !important;
     font-family: initial;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
